# tu41

./: Makefile  README.md  TU41_full_csv_data_file.csv  stack.yaml  transunion.cabal  transunion_FFR.txt
executable/: Main.hs
lib/: Csv.hs  Parser.hs  Transunion.hs  Util.hs
test/: TransunionSpec.hs
